# micrograd

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
micrograd/: README.md  engine.py  nn.py  train.py
notebooks/: micrograd_from_scratch.ipynb
tests/: README.md  test_engine.py  test_nn.py
