[project]
name = "nn-zero-to-hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
